--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -1,4 +1,4 @@
-## Ubuntu System Block 
+## 4DGS 
 
 I met ubutun system restart and block due to full of disk. The root reason is full of disk ("$"), however, by transfer in and out, this is not a problem.
 So, it this situation, I stuck into the system login. if you saw "DEL: F12: END", and it doesn't work when you press the corresponding keys. Never mind! You can restart the system and press multi 'Shift' into the 'Grub' menu. 
@@ -31,3 +31,6 @@ ForEach ($thing in $things) {
     Write-Output "It highlights it using the GitHub style"
 }
 ```
+
+### Reference
+**[Real-time Photorealistic Dynamic Scene Representation and Rendering with 4D Gaussian Splatting](https://arxiv.org/abs/2310.10642)**,[`code`](#https://github.com/fudan-zvg/4d-gaussian-splatting/tree/main)
