--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -33,4 +33,4 @@ ForEach ($thing in $things) {
 ```
 
 ### Reference
-**[Real-time Photorealistic Dynamic Scene Representation and Rendering with 4D Gaussian Splatting](https://arxiv.org/abs/2310.10642)**,[`code`](#https://github.com/fudan-zvg/4d-gaussian-splatting/tree/main)
+**[Real-time Photorealistic Dynamic Scene Representation and Rendering with 4D Gaussian Splatting](https://arxiv.org/abs/2310.10642)**,[`code`](https://github.com/fudan-zvg/4d-gaussian-splatting/tree/main)
