--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -13,10 +13,10 @@ This is a sample blog post. You can talk about all sorts of fun things here.
 
 #### 3DGS
 
-We all know 3DGS use a series of Gaussian Points to simulation the scene. The scene rendering is a differentiable rasterization process, aiming at getting the color of a certain pixel $\(u,v)\$ in the direction of observation $\d\$. This can be formulate as,
+We all know 3DGS use a series of Gaussian Points to simulation the scene. The scene rendering is a differentiable rasterization process, aiming at getting the color of a certain pixel $`(u,v)`$ in the direction of observation $`d`$. This can be formulate as,
 
 ```math
-$$I(u,v)=\sum_{i=1}^Np_i(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_j)$$
+I(u,v)=\sum_{i=1}^Np_i(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_j)
 ```
 
 ```tsql
