4dgs blog update

--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -1,3 +1,4 @@
+<script type="text/x-mathjax-config"> MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$'],['\\(','\\)']]} }); </script> <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
 ## 4DGS 
 
 I met ubutun system restart and block due to full of disk. The root reason is full of disk ("$"), however, by transfer in and out, this is not a problem.
