--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -2,11 +2,6 @@
 
 ## 4DGS 
 
-I met ubutun system restart and block due to full of disk. The root reason is full of disk ("$"), however, by transfer in and out, this is not a problem.
-So, it this situation, I stuck into the system login. if you saw "DEL: F12: END", and it doesn't work when you press the corresponding keys. Never mind! You can restart the system and press multi 'Shift' into the 'Grub' menu. 
-
-If the file does not start with a header, then the post title will be derived from the filename.
-
 This is a sample blog post. You can talk about all sorts of fun things here.
 
 ---
@@ -15,11 +10,29 @@ This is a sample blog post. You can talk about all sorts of fun things here.
 
 #### 3DGS
 
-We all know 3DGS use a series of Gaussian Points to simulation the scene. The scene rendering is a differentiable rasterization process, aiming at getting the color of a certain pixel $$(u,v)$$ in the direction of observation $$d$$. This can be formulate as,
+We all know 3DGS use a series of Gaussian Points to simulation the scene. The scene rendering is a differentiable rasterization process, aiming at getting the color of a certain pixel $$(u,v)$$ in the direction of observation $$d$$. This can be formulated as,
 
 $$
 I(u,v)=\sum_{i=1}^Np_i(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_j)
 $$
+
+### 4DGS
+
+#### Problem formulation
+
+Back to 4DGS, the naive idea is to add the time $$t$$ directly into the above 3DGS rendering formula. Then, we can obtain,
+
+$$
+I(u,v,t)=\sum_{i=1}^Np_i(u,v,t)\alpha_ic_i(d)\prod_{j=1}^{i-1}(1-p_j(u,v,t)\alpha_j)
+$$
+
+if we assume time and space are independent, we can further use joint probability to decompose the probability density. And we can transfer the naive 4DGS formula into,
+
+$$
+I(u,v,t)=\sum_{i=1}^Np_i(t)p_i(u,v|t)\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(t)p_j(u,v|t)\alpha_j)
+$$
+
+Now, we decompose the color contribution $$p_i(u,v,t)$$ of each Gaussian into the margin probability $$p_i(t)$$ at time t, and the conditional space probability $$p_i(u,v|t)$$ at time $$t$$.
 
 ```tsql
 SELECT This, [Is], A, Code, Block -- Using SSMS style syntax highlighting
