--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -23,7 +23,7 @@ $$
 Back to 4DGS, the naive idea is to add the time $$t$$ directly into the above 3DGS rendering formula. Then, we can obtain,
 
 $$
-I(u,v,t)=\sum_{i=1}^Np_i(u,v,t)\alpha_ic_i(d)\prod_{j=1}^{i-1}(1-p_j(u,v,t)\alpha_j)
+I(u,v,t)=\sum_{i=1}^Np_i(u,v,t)\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(u,v,t)\alpha_j)
 $$
 
 if we assume time and space are independent, we can further use joint probability to decompose the probability density. And we can transfer the naive 4DGS formula into,
@@ -32,7 +32,20 @@ $$
 I(u,v,t)=\sum_{i=1}^Np_i(t)p_i(u,v|t)\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(t)p_j(u,v|t)\alpha_j)
 $$
 
-Now, we decompose the color contribution $$p_i(u,v,t)$$ of each Gaussian into the margin probability $$p_i(t)$$ at time t, and the conditional space probability $$p_i(u,v|t)$$ at time $$t$$.
+Now, we decompose the color contribution $$p_i(u,v,t)$$ of each Gaussian into the margin probability $$p_i(t)$$ at time t, and the conditional space probability $$p_i(u,v|t)$$ at time $$t$$. However, this assumption view time and space as independent, which is bound to fail to capture the dynamic nature of the scene.
+
+
+#### 4DGS representation
+The following is the representation of 4DGS proposed by this article. We need to treat time and space dimensions equally as a integrated 4D Gaussian model. From 3DGS, the covariance matrix can use eigenvalue decomposition to obtain scale and rotation matrix, which is matter for 3DGS transformation. Then, in 4DGS, the 4D covariance matrix is first need to be created. 
+
+We first add time dimention into scale matrix. Due to scale matrix is diagonal matrix, we can add the time into the last position $$S={\rm diag}(s_x,s_y,s_z,s_t)$$. As for 4D rotation matrix, we can represent by two isotropic rotations $$R=L(q_l)R(q_r)=\begin{pmatrix}a & -b & -c & -d \\ b & a & -d & c \\ c & d & a & -b \\ d & -c & b & a
+\end{pmatrix}\begin{pmatrix}p & -q & -r & -s \\ q & p & s & -r \\ r & -s & p & q \\ s & r & -q & p
+\end{pmatrix}$$
+
+
+
+
+
 
 ```tsql
 SELECT This, [Is], A, Code, Block -- Using SSMS style syntax highlighting
