--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -38,11 +38,15 @@ Now, we decompose the color contribution $$p_i(u,v,t)$$ of each Gaussian into th
 #### 4DGS representation
 The following is the representation of 4DGS proposed by this article. We need to treat time and space dimensions equally as a integrated 4D Gaussian model. From 3DGS, the covariance matrix can use eigenvalue decomposition to obtain scale and rotation matrix, which is matter for 3DGS transformation. Then, in 4DGS, the 4D covariance matrix is first need to be created. 
 
-We first add time dimention into scale matrix. Due to scale matrix is diagonal matrix, we can add the time into the last position $$S={\rm diag}(s_x,s_y,s_z,s_t)$$. As for 4D rotation matrix, we can represent by two isotropic rotations $$R=L(q_l)R(q_r)=\begin{pmatrix}a & -b & -c & -d \\ b & a & -d & c \\ c & d & a & -b \\ d & -c & b & a
-\end{pmatrix}\begin{pmatrix}p & -q & -r & -s \\ q & p & s & -r \\ r & -s & p & q \\ s & r & -q & p
-\end{pmatrix}$$
+We first add time dimention into scale matrix. Due to scale matrix is diagonal matrix, we can add the time into the last position $$S={\rm diag}(s_x,s_y,s_z,s_t)$$. As for 4D rotation matrix, we can represent by two isotropic rotations $$R=L(q_l)R(q_r)$$. The first 3 items of the mean of the 4D Gaussian distribution correspond to the position in 3D space, and the last one corresponds to the time $$\mu = (\mu_x,\mu_y,\mu_z,\mu_t)$$.
 
+Finally, according to the properties of multivariate Gaussian distribution, 3D Gaussians can be derived from 4D Gaussians for rasterized rendering by marginalizing the temporal dimension. Compute a 3D representation of the scene at any given time t can be formualted as,
 
+$$
+\mu_{xyz|t}=\mu_{1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}(t-\mu_t) \\
+\Sigma_{xyz|t}=\Sigma_{1:3,1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}\Sigma_{4,1:3} \\
+p(t)=N(t;\mu_4,\Sigma_{4,4})
+$$
 
 
 
