--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -32,7 +32,7 @@ $$
 I(u,v,t)=\sum_{i=1}^Np_i(t)p_i(u,v|t)\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(t)p_j(u,v|t)\alpha_j)
 $$
 
-Now, we decompose the color contribution $$p_i(u,v,t)$$ of each Gaussian into the margin probability $$p_i(t)$$ at time t, and the conditional space probability $$p_i(u,v|t)$$ at time $$t$$. However, this assumption view time and space as independent, which is bound to fail to capture the dynamic nature of the scene.
+Now, we decompose the color contribution $$p_i(u,v,t)$$ of each Gaussian into the margin probability $$p_i(t)$$ at time t, and the conditional space probability $$p_i(u,v\|t)$$ at time $$t$$. However, this assumption view time and space as independent, which is bound to fail to capture the dynamic nature of the scene.
 
 
 #### 4DGS representation
@@ -43,8 +43,12 @@ We first add time dimention into scale matrix. Due to scale matrix is diagonal m
 Finally, according to the properties of multivariate Gaussian distribution, 3D Gaussians can be derived from 4D Gaussians for rasterized rendering by marginalizing the temporal dimension. Compute a 3D representation of the scene at any given time t can be formualted as,
 
 $$
-\mu_{xyz|t}=\mu_{1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}(t-\mu_t) \\
-\Sigma_{xyz|t}=\Sigma_{1:3,1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}\Sigma_{4,1:3} \\
+\mu_{xyz|t}=\mu_{1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}(t-\mu_t) 
+$$
+$$
+\Sigma_{xyz|t}=\Sigma_{1:3,1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}\Sigma_{4,1:3} 
+$$
+$$
 p(t)=N(t;\mu_4,\Sigma_{4,4})
 $$
 
