--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -45,34 +45,48 @@ Finally, according to the properties of multivariate Gaussian distribution, 3D G
 $$
 \mu_{xyz|t}=\mu_{1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}(t-\mu_t) 
 $$
+
 $$
 \Sigma_{xyz|t}=\Sigma_{1:3,1:3}+\Sigma_{1:3,4}\Sigma_{4,4}^{-1}\Sigma_{4,1:3} 
 $$
+
 $$
 p(t)=N(t;\mu_4,\Sigma_{4,4})
 $$
 
+Establishing 4DGS, we can simulate dynamics in terms of spatiotemporal consistency. And this is the key that the finally fps can up to 140 compared to papers utilize transformation field to simulation dynamic.
+
+#### 4DSH
+
+The next part is about 4D spherindrical harmonics. Right, this noun is both familiar and unfamiliar. You must hear spherical harmonics is 3DGS. In the end, spherical harmonics is just a set of basis functions. With higher rank, the better for representation. Then, for adding time dimension, we need to use 4D spherindrical harmonics, just merging one dimension basis function into the 3DSH. As for 1D time SH, this paper use the Fourier series to represent. Thus, we can formualte 4DSH into,
+
+$$
+Z_{nl}^m(t,\theta,\phi)={\rm cos}(\frac {2\pi n} T t)Y_l^m(\theta,\phi)
+$$
+
+Among, $$Y_l^m(\theta,\phi)$$ is known to us as 3DSH. And $$l$$ denotes the order of the spherical harmonic function, $$m$$ is the corresponding suborder, and $$\theta$$ and $$\phi$$ are the spherical coordinates of the view Angle. $$n$$ denotes the Fourier series. In the training, we enhance the spatio-temporal expressivity by gradually increasing $$l$$ and $$n$$.
+
+### Some trick in training
+
+Yep! When I reproduce this paper, the finally psnr can not reach the reported one. I tried two instance on Plenoptic Video dataset, `coffee_martini` and `cook_spinach`. The psnr results are 2 point lower than the author. The most reason is densitification iteration steps.
+
+#### Densification
+
+Densification in 3DGS has two main method, split and clone. Using this, the representation of scene during training can be better, due to splitting big Gaussians is important to allow good reconstruction of the background, while cloning the small Gaussians instead of splitting
+them allows for a better and faster convergence especially on thin structures.
+
+In spatio-temporal densification, the main purpose is to dynamically add Gaussian points during the training process to better represent the scene details. The practice is to evaluate the Gaussian density in the scene considering both the average gradient in the temporal dimension and the gradient in the average pilot spatial location. From the ablation result in this paper, densification is matter for the last scene rendering.
 
 
+#### Batch Sampling
 
-```tsql
-SELECT This, [Is], A, Code, Block -- Using SSMS style syntax highlighting
-    , REVERSE('abc')
-FROM dbo.SomeTable s
-    CROSS JOIN dbo.OtherTable o;
-```
 
-#### Some PowerShell Code
+### Reference and useful links
 
-```powershell
-Write-Host "This is a powershell Code block";
-
-# There are many other languages you can use, but the style has to be loaded first
-
-ForEach ($thing in $things) {
-    Write-Output "It highlights it using the GitHub style"
-}
-```
-
-### Reference
 **[Real-time Photorealistic Dynamic Scene Representation and Rendering with 4D Gaussian Splatting](https://arxiv.org/abs/2310.10642)**, [`code`](https://github.com/fudan-zvg/4d-gaussian-splatting/tree/main)
+
+**[3D Gaussian Splatting for Real-Time Radiance Field Rendering](https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/3d_gaussian_splatting_high.pdf)**
+
+[`Spherical Harmonics`](https://puye.blog/posts/SH-Introduction-CN/)
+
+
