--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -1,6 +1,6 @@
 ## 4DGS 
 
-This is a sample blog post. You can talk about all sorts of fun things here.
+A note for **Real-time Photorealistic Dynamic Scene Representation and Rendering with 4D Gaussian Splatting**.
 
 ---
 
