--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -90,6 +90,6 @@ ___
 
 **[3D Gaussian Splatting for Real-Time Radiance Field Rendering](https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/3d_gaussian_splatting_high.pdf)**
 
-[`Spherical Harmonics`](https://puye.blog/posts/SH-Introduction-CN/)
+**[Spherical Harmonics Introduction](https://puye.blog/posts/SH-Introduction-CN/)**
 
 
