--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -8,7 +8,7 @@ A note for **Real-time Photorealistic Dynamic Scene Representation and Rendering
 
 #### 3DGS
 
-We all know 3DGS use a series of Gaussian Points to simulation the scene. The scene rendering is a differentiable rasterization process, aiming at getting the color of a certain pixel $$(u,v)$$ in the direction of observation $$d$$. This can be formulated as,
+We all know 3DGS uses a series of Gaussian Points to simulation the scene. The scene rendering is a differentiable rasterization process, aiming at getting the color of a certain pixel $$(u,v)$$ in the direction of observation $$d$$. This can be formulated as,
 
 $$
 I(u,v)=\sum_{i=1}^Np_i(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_ic_i(d_i)\prod_{j=1}^{i-1}(1-p_j(u,v;\mu_i^{2d},\Sigma_i^{2d})\alpha_j)
@@ -79,8 +79,6 @@ them allows for a better and faster convergence especially on thin structures.
 
 In spatio-temporal densification, the main purpose is to dynamically add Gaussian points during the training process to better represent the scene details. The practice is to evaluate the Gaussian density in the scene considering both the average gradient in the temporal dimension and the gradient in the average pilot spatial location. From the ablation result in this paper, densification is matter for the last scene rendering.
 
-
-#### Batch Sampling
 
 ___
 
