--- a/_posts/2024-10-24-4DGS in ICLR.md
+++ b/_posts/2024-10-24-4DGS in ICLR.md
@@ -68,7 +68,7 @@ Among, $$Y_l^m(\theta,\phi)$$ is known to us as 3DSH. And $$l$$ denotes the orde
 
 ___
 
-### Some trick in training
+### Trick in training
 
 Yep! When I reproduce this paper, the finally psnr can not reach the reported one. I tried two instance on Plenoptic Video dataset, `coffee_martini` and `cook_spinach`. The psnr results are 2 point lower than the author. The most reason is densitification iteration steps.
 
